--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
                                 aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <div class="customNavBar collapse navbar-collapse hide clearfix" id="navbarBasic">
+                            <div class="customNavBar bg-black collapse navbar-collapse hide clearfix w-100" id="navbarBasic">
                                 <ul class="navbar-nav mb-xl-0">
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link fw-bold text-uppercase fs-5 active" aria-current="page"
+                                        <a class="nav-link text-white fw-bold text-uppercase fs-5 active" aria-current="page"
                                             href="#mission">MISSION</a>
                                     </li>
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link fw-bold text-uppercase fs-5" href="#aboutUs">ABOUT US</a>
+                                        <a class="nav-link text-white fw-bold text-uppercase fs-5" href="#aboutUs">ABOUT US</a>
                                     </li>
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link fw-bold text-uppercase fs-5" href="#services">SERVICES</a>
+                                        <a class="nav-link text-white fw-bold text-uppercase fs-5" href="#services">SERVICES</a>
                                     </li>
                                     <li class="nav-item ms-3">
-                                        <a class="nav-link fw-bold text-uppercase fs-5" href="#contactUs">CONTACT US</a>
+                                        <a class="nav-link fw-bold text-white text-uppercase fs-5" href="#contactUs">CONTACT US</a>
                                     </li>
                                 </ul>
                             </div>
